tools/tests/ui/fail/l1079.cnf
// Test file for error code: L1079
// Expected error: Underflow Unexpected character in encoding -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
